<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/microsoft_teams"
        android:textColor="@color/microsoftTeams"
        android:textSize="28sp"
        />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="280dp"
        android:layout_height="230dp"
        android:src="@drawable/microsoft_team_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_started"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_microsoft_account"/>

    <EditText
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/enter_email_phone_or_skype"
        android:backgroundTint="@color/editText"
        android:background="@drawable/rounded_edittext"
        />

    <Button
        android:layout_marginTop="10dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:padding="12dp"
        android:text="@string/sign_in"
        android:backgroundTint="@color/sign_in_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/sign_in_button"
        android:text="@string/get_help_with_signing_in"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="10dp"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/join_a_meeting"
        android:textColor="@color/sign_in_button"
        android:textSize="15sp"
        app:strokeColor="@color/sign_in_button"
        android:backgroundTint="@color/white"
        app:strokeWidth="1dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        app:iconGravity="textStart"
        app:icon="@drawable/microsoft_logo"
        app:iconTint="@null"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up_for_free"
        android:textAllCaps="false"
        android:textColor="@color/sign_in_button"
        android:textSize="15sp"
        app:strokeColor="@color/sign_in_button"
        app:strokeWidth="1dp" />


</LinearLayout>